# YADRO_Task

./: CMakeLists.txt  README.md
include/: App.h  all_headers.h  allheaders.h  app.h  csv_table.h
src/: App.cpp  CsvTable.cpp  CsvTable.h  app.cpp  csv_table.cpp  csv_table.h  main.cpp
tests/: test_3.csv  test_4.csv  test_5.csv  test_6.csv  test_7.csv  test_8.csv  test_9.csv
